update docs and requirements
